# dty_common

./: .gitignore  CMakeLists.txt  README.md  init.bat  init.sh  package-lock.json  package.json
.old/: dty-core.cpp
.old/io/: iobase.hpp
.old/io/base_stream/: Export.json
.old/math/src/: biginteger.cpp
.old/prime/: arghelper.hpp  array.hpp  stack.hpp  string.hpp  times.hpp
.old/prime/core/: basetype.hpp  icollections.hpp  internal.h  list.json
.old/prime/core/src/: float.cpp  parse.base.cpp
.old/prime/src/: system.cpp  versionFormatHelper.cpp  versionParseHelper.cpp
.old/prime/src/time/: datetime.cpp  time.format.cpp  time.parse.cpp
.project/: msgbundle.txt  stringsmartpointer.txt
.project/counter/: 2021-12-23.csv  2021-12-23.txt  2022-04-06.csv  2022-04-06.txt  2022-05-09.json  2022-05-09.txt
.project/docs/: DEVELOP_DOC_EN.md  DEVELOP_DOC_ZH.md  README_EN.md  README_ZH.md
.project/docs/zh_CN/: BaseDataType.md  MicroDefined.md  MultiLanguage.md  Namespace.md
.project/docs/zh_CN/namespace/: namespace_dty.md  namespace_dty_collection.md  namespace_dty_except.md  namespace_dty_i18n.md  namespace_dty_test.md
.project/i18n/Creater/: Creater.sln
.project/i18n/Creater/Creater/: Area.cs  Creater.csproj  CreaterHelper.cs  LanguageReader.cs  MacroWriter.cs  Program.cs
config/: .prettierrc  build.json  eclipse-formatter.xml  res.config.json
config/make/: build-native.json  build-test.json  build.json
native/: CMakeLists.txt  Export.json  basic-types.h  console.hpp  core.cpp  core.hxx  cross-platform.h  dty-core.cpp  dty-core.hxx  dty-test-core.cpp  list.json  prime.hxx  system-errors.c  test-core.cpp  test-core.hxx
native/core/: basetype.hpp  cross_platform.h  error.hpp  event.hpp  formatter.hpp  icollections.hpp  internal.h  iterator.hpp  list.json  pointer.hpp  property.hpp  utilize.h  utilize.hh  utilize.hpp
native/core/src/: boolean.cpp  double.cpp  error.cpp  event.cpp  float.cpp  formatter-base.cpp  formatter.cpp
native/ext/: stdin.hpp
native/io/: CMakeLists.txt  Export.json  package.json
native/io/base_stream/: consolebase.hpp  ostream.cpp  ostream.hpp
native/math/: CMakeLists.txt  Export.json  bignumber.hpp  common.hpp
native/math/base/: baseValue.cpp  bytesCalc.cpp
native/model/: CMakeLists.txt  Export.json  package.json
native/prime/: CMakeLists.txt  Export.json  array.hpp  async.hpp  basetype.hpp  bitmap.hpp  console.hpp  core.hxx  datetime.hpp  formatter.hpp  guid.hpp  icollections.hpp  iterator.hpp  iterator_old.hpp  math.hpp  new_iterator.hpp  object.hpp  operatingSystem.hpp  package.json  queue.hpp  random.hpp  stack.hpp  string.hpp  system.hpp  times.hpp  version.hpp
native/prime/core/: CMakeLists.txt  Export.json  arghelper.hpp  basetype.hpp  consolebase.hpp  core_imp.cpp  error.cpp  error.hpp  event.hpp  formatter.hpp  icollections.hpp  internal.h  iterator.hpp  msgbundle.hpp  pointer.hpp  property.hpp  thread.cpp  thread.hpp
native/prime/core/internal/: basic_apis.cpp  cross_platform.h  tfw.hpp  utilize.h  utilize.hh
native/prime/core/internal/res/: dty_get_type.cc  dty_type.cc  utilize.cc
native/prime/core/internal/src/: c_string_apis.cpp  empty_object.cpp  object.cpp
native/prime/core/internal/src/str_apis/: byte.cpp  double.cpp  float.cpp  int.cpp  long.cpp  sbyte.cpp  short.cpp  uint.cpp  ulong.cpp  ushort.cpp
native/prime/core/internal/tfw/: common.h  definition.hpp  test_entity.hpp
native/prime/core/res/: basetype.cc  dty_collection_filter_result.cc  dty_collection_i_iterator_entity.cc  dty_collection_iterator_entity.cc  dty_event_handler.cc  dty_key_value_pair.cc  dty_lproperty.cc  dty_property.cc  dty_smart_pointer.cc  event.cc  icollections.cc  internal.cc  iterator.cc  pointer.cc  property.cc
native/prime/core/src/: arghelper.cpp  boolean.cpp  double.cpp  error.cpp  event.cpp  float.cpp  formatter.cpp  parse.base.cpp  thread.cpp
native/prime/res/: dty_collection_filter_result.cc  dty_collection_i_iterator_entity.cc
native/prime/src/: bitmap.cpp  console.cpp  guid.cpp  operatingSystem.cpp  random.cpp  string.cpp  version.cpp
native/prime/src/datatype/: int32.hpp
native/prime/src/time/: time.now.cpp  times.helper.cpp  timespan.cpp
native/prime/temp/: dty_collection_filter_result.cc  dty_collection_i_iterator_entity.cc  dty_collection_iterator.cc  dty_collection_iterator_entity.cc
native/res/creater/: Creater  Creater.deps.json
native/res/i18n/: dty-core.json  dty-test-core.json  lang_value_list.json  language.h  template.txt
native/res/scripts/: i18n.js
native/text/: CMakeLists.txt  Export.json  package.json
native/text/src/: text.c  text.cpp
native/thread/: CMakeLists.txt  Export.json  thread.hpp
resource/features/: basic.json  config.json
resource/i18n/: README.md  config.json  dty-core.json
test/: CMakeLists.txt  frame.hxx  testframe.hxx
test/dty-core/: CMakeLists.txt  core_api.cpp  test.json  testspecs.json  val2str.cpp
test/frame/: common.h  definition.hpp  test_entity.hpp
test/prime/: CMakeLists.txt  all_compiler_test.cpp  array.cpp  bitmap.cpp  test.json  testspecs.json  version.cpp
test/prime/core/: CMakeLists.txt  basetype.cpp  event.cpp  formatter.cpp  iterator.cpp  package.json  prop.cpp  property.cpp  property.lambda.test.cpp  property.main.cpp  property.test  property.test.cpp  smartpointer.cpp  test.json  testspecs.json
test/prime/core/src/: basetype_boolean.cpp  basetype_decimal.hpp  basetype_integer.cpp  filter_result.cpp  iterator_entity.cpp  iterator_object.cpp
tools/: README.md  README_EN.md  README_ZH.md  build-test.bat  build-test.sh  build.bat  build.sh  init.bat  init.sh  package.json
tools/dotnet/: build.json  tools.sln
tools/dotnet/Auto/: Auto.csproj
tools/dotnet/Maker/: Maker.csproj
tools/dotnet/Start/: Program.cs  Start.csproj
tools/java/: build.json
tools/scripts/: build-native.js  build-test.js  build.js  define.js  features.js  i18n.js
tools/scripts/common/: build.js  buildHelper.js  define.js  features.js  i18n.js  prebuild.js  targetHelper.js  utils.js
tools/scripts/utils/: fileReader.js
(+39 files in other folders)
