set(DTY_NATIVE_TEST_DTY_CORE_NAME ${DTY_NATIVE_TEST_NAME}.dty-core)

message("        构建: " ${DTY_NATIVE_TEST_DTY_CORE_NAME})

# message("            执行: " ${DTY_NATIVE_TEST_DTY_CORE_NAME}.)
# add_executable(
#     ${DTY_NATIVE_TEST_DTY_CORE_NAME}.
    
#     event.cpp
    
#     ${PROJECT_SOURCE_DIR}/native/dty-test-core.cpp
#     ${PROJECT_SOURCE_DIR}/native/dty-core.cpp
# )

message("        构建-完成")